Bug 795556 - Part 2: Move privacy status propagation for new windows into the platform. r=bz